Update travis.yml with correct config
Co-authored-by: Shaunda Cunningham 
<4582791+smcunning@users.noreply.github.com> Co-authored-by: Jake Heft 
<60531761+jakeheft@users.noreply.github.com> Co-authored-by: Carson 
Jardine <65981543+carson-jardine@users.noreply.github.com> 
Co-authored-by: Curtis Bartell 
<60277914+c-bartell@users.noreply.github.com>

Co-Authored-By: Shaunda Cunningham <4582791+smcunning@users.noreply.github.com>
Co-Authored-By: Curtis Bartell <60277914+c-bartell@users.noreply.github.com>
Co-Authored-By: Carson Jardine <65981543+carson-jardine@users.noreply.github.com>
Co-Authored-By: Jake Heft <60531761+jakeheft@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 language: python
 python:
-- '3.8'
+- '3.9.1'
 services:
 - postgresql
 addons:
-  postgresql: '9.6'
+  postgresql: '13'
 install:
 - pip install -r requirements.txt
 before_script:
 - psql --version
-- psql -c 'create database yourdatabase_test;' -U postgres
+- psql -c 'create database jobquest_test;' -U postgres
 - python manage.py db upgrade
 script:
 - pytest
@@ -17,9 +17,9 @@ deploy:
   provider: heroku
   api_key:
     secure:
-  app: your-heroku-app-name
+  app: job-quest-be
   on:
-    repo: githubu_sername/repo_name
+    repo: JobQuest/job-quest-be
     branch: main
   skip_cleanup: 'true'
   run:
