Update .travis.yml with different app name
Co-authored-by: Shaunda Cunningham 
<4582791+smcunning@users.noreply.github.com>
Co-authored-by: Jake Heft <60531761+jakeheft@users.noreply.github.com>
Co-authored-by: Carson Jardine 
<65981543+carson-jardine@users.noreply.github.com>
Co-authored-by: Curtis Bartell 
<60277914+c-bartell@users.noreply.github.com>

Co-Authored-By: Shaunda Cunningham <4582791+smcunning@users.noreply.github.com>
Co-Authored-By: Curtis Bartell <60277914+c-bartell@users.noreply.github.com>
Co-Authored-By: Carson Jardine <65981543+carson-jardine@users.noreply.github.com>
Co-Authored-By: Jake Heft <60531761+jakeheft@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ deploy:
     secure:
   app: job-quest-be
   on:
-    repo: JobQuest/job-quest-be
+    repo: JobQuest/jobquest-be
     branch: main
   skip_cleanup: 'true'
   run:
