--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 - pip install -r requirements.txt
 before_script:
 - psql --version
-- psql -c 'create database jobquest_test;' -U postgresql
+- psql -c 'create database jobquest_test;' -U postgres
 - python manage.py db upgrade
 script:
 - pytest
