--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+# dist: xenial
 language: python
 python:
 - '3.9.1'
@@ -11,7 +11,7 @@ install:
 before_script:
 - psql --version
 # - psql -c 'drop database jobquest_test;' -U postgres
-- psql -c 'create database jobquest_test;' 
+- psql -c 'create database jobquest_test;' -U postgres
 - python manage.py db upgrade
 script:
 - pytest
