--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ python:
 services:
 - postgresql
 addons:
-  postgresql: '13'
+  postgresql: '9.6'
 install:
 - pip install -r requirements.txt
 before_script:
 - psql --version
-# - psql -c 'create database jobquest_test;' -U postgres
+- psql -c 'create database jobquest_test;' -U postgres
 - python manage.py db upgrade
 script:
 - pytest
