--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,6 @@ deploy:
     repo: JobQuest/jobquest-be
     branch: main
   skip_cleanup: 'true'
+ run:
+    - pip install -r requirements.txt
+    - python manage.py db upgrade
